--- a/en/index.html
+++ b/en/index.html
@@ -34,11 +34,12 @@
           <p>
             <span class="name">NANDAR THEINT THEINT THU</span> </br>
             <span class="position">System Developer</span></br></br>
-            <span class="about-info">After graduating from university (2017), I have been working as a system developer.
-              I have experience in both web application development and desktop application development, and I am also
-              participating in various projects.
-              I have a strong desire to acquire new skills, so I try to do self-study every day, and currently
-              I am building mobile applications by using Flutter.
+            <span class="about-info">I have been working as a system developer since 2017,and
+              have experiences in both web application and desktop application development.
+              Currently,I am involving in the water charges management web system development project which is developed
+              with java,typescript and angular.
+              A lot of new functions and technologies are appearing every day, so I always keep in
+              mind that it is important to take new challenges and make efforts to acquire new skills.
             </span>
           </p>
         </div>
@@ -99,10 +100,10 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>01.｜New financial system for water charges</h4>
+            <h4>01.｜Water Charges Management System</h4>
             <p>
-              We are currently working on the issue, and we are modifying and developing Java Batch, typeScript and
-              PL/SQL.
+              Currently working on the issues, and we are modifying and developing Java Batch, typeScript and
+              PL/SQL as needed.
             </p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -110,7 +111,7 @@
             </p>
             <p>
               <span class="fa-solid fa-screwdriver-wrench"></span>
-              <span>DEVELOPMENT、CREAT TEST SPECIFICATION、Implement Test</span>
+              <span>Development、Test Specification、Implement Test</span>
             </p>
 
           </div>
@@ -154,9 +155,9 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>02.｜Reconstruction of EC site for tool wholesalers</h4>
+            <h4>02.｜Reconstruction of EC Site for Tool Wholesalers</h4>
             <p>I was mainly in charge of back-end development.
-              I created test specifications and run the tests ,and also fixed the problem that occurred in the
+              I also created test specifications and run the tests and then fixed the problems that occurred in the
               acceptance test.
             </p>
             <p>
@@ -165,7 +166,7 @@
             </p>
             <p>
               <span class="fa-solid fa-screwdriver-wrench"></span>
-              <span>DEVELOPMENT, CREAT TEST SPECIFICATION、IMPLEMENT TESTS</span>
+              <span>Development, Test Specification、Implement Tests</span>
             </p>
           </div>
           <div class="proj-skills">
@@ -198,19 +199,18 @@
           </div>
           <div class="proj-desc proj-desc-box-pri">
             <p>
-              Desktop application that manages the data read by the QR code of tax invoices.
+              Desktop application that manages the data read by the QR code of tax invoices
             </p>
           </div>
         </div>
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>03.｜Unified Local tax QR code system</h4>
+            <h4>03.｜Unified Local Tax QR Code System</h4>
             <p>
-              We have implemented a function to correct and delete the associated batch data by making it possible to
-              correct the data according
-              to the image of the payment slip and statement displayed on the screen.
-              I was also in charge of outputting files based on screen input conditions.
+              I have implemented the functions to correct and delete the associated batch data according
+              to the images of the payment slip and statement displayed on the screen.
+              I was also in charge of outputting files based on input conditions.
             </p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -218,7 +218,7 @@
             </p>
             <p>
               <span class="fa-solid fa-screwdriver-wrench"></span>
-              <span>Correction of detailed design plans、DEVELOPMENT、CREAT TEST SPECIFICATION、UNIT TEST、Integration
+              <span>Detailed Design Plans、Development、Test Specification、Unit Test、Integration
                 Test</span>
             </p>
 
@@ -244,13 +244,13 @@
             <img class="proj-img" src="../images/proj-kanshisystem.svg" width="150px" height="auto" />
           </div>
           <div class="proj-desc proj-desc-box-second">
-            <p>在Web application for warehouse management and logistics monitoring</p>
+            <p>Web Application for Warehouse Management and Logistics Monitoring</p>
           </div>
         </div>
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>04.｜Core system Development for Chinese factory</h4>
+            <h4>04.｜Core System Development for Chinese Factory</h4>
             <p>Developed AP and, created the screens that output the files.</p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -258,7 +258,7 @@
             </p>
             <p>
               <span class="fa-solid fa-screwdriver-wrench"></span>
-              <span>DEVELOPMENT、Implement tests with JUnit</span>
+              <span>Development、Implement tests with JUnit</span>
             </p>
           </div>
           <div class="proj-skills">
@@ -290,14 +290,15 @@
             <img class="proj-img" src="../images/proj-projectManagement.svg" width="150px" height="auto" />
           </div>
           <div class="proj-desc proj-desc-box-second">
-            <p>Web application for managing projects and tasks</p>
+            <p>Projects Management Web pplication</p>
           </div>
         </div>
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
             <h4>05.｜PMS Dashboard Development</h4>
-            <p>I was in charge of both the backend and frontend of the screens for managing project and task details.
+            <p>I was in charge of both backend and frontend development of the screens for managing project and task
+              details.
               I also had the chance to work with the asynchronous screens for graphs that displayed progress and
               amounts.</p>
             <p>
@@ -306,7 +307,7 @@
             </p>
             <p>
               <span class="fa-solid fa-screwdriver-wrench"></span>
-              <span>Detailed Plans、Development、Test Specification、Implement Tests、Integrated Tests</span>
+              <span>Detailed Plans、Development、Test Specification、Implement Tests、Integration Tests</span>
             </p>
           </div>
           <div class="proj-skills">
@@ -338,13 +339,13 @@
             <img class="proj-img" src="../images/proj-compensate.svg" width="150px" height="auto" />
           </div>
           <div class="proj-desc proj-desc-box-second">
-            <p>WEB system with the function of claiming and collecting manufacturer compensation</p>
+            <p>WEB system With The Function of Claiming and Collecting Manufacturer Compensation</p>
           </div>
         </div>
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>06.｜Repair Compensation System</h4>
+            <h4>06.｜Repairing Compensation System</h4>
             <p>It is an additional support for deposit management functions after collection, and we have developed new
               screens, added functions to existing screens, and file output.</p>
             <p>
@@ -361,7 +362,10 @@
               <img class="skill-tag" src="../images/no background/VisualStudio6-icon-noBG.svg" alt="VB6" />
               <label>VB6</label>
             </div>
-
+            <div class="proj-skill-tag">
+              <img class="skill-tag" src="../images/no background/database-icon-noBG.svg" alt="SQL Server" />
+              <label>SQL Server</label>
+            </div>
           </div>
         </div>
       </div>
@@ -374,7 +378,7 @@
             <img class="proj-img" src="../images/proj-ecobuy.svg" width="150px" height="auto" />
           </div>
           <div class="proj-desc proj-desc-box-second">
-            <p>Windows Application that outputs the product QR code</p>
+            <p>Windows Application that Outputs The Product QR Code</p>
           </div>
         </div>
         <!-- Project Contribution -->
@@ -413,7 +417,7 @@
             <img class="proj-img" src="../images/proj-multilanguage.svg" width="150px" height="auto" />
           </div>
           <div class="proj-desc proj-desc-box-second">
-            <p>Web application for managing projects and tasks</p>
+            <p>Projects Management Web pplication</p>
           </div>
         </div>
         <!-- Project Contribution -->
