--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <script src="https://kit.fontawesome.com/29a0c0f23e.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <title>PORTFOLIO | NANDAR THEINT THEINT THU</title>
+  <title>ポートフォリオ | ナンダティンティントウ</title>
   <link rel="icon" href="avatar-bg.svg" />
 </head>
 
@@ -35,9 +35,9 @@
           <p>
             <span class="name">ナンダ ティン テイン トウ</span> </br>
             <span class="position">システム開発者</span></br></br>
-            <span class="about-info">大学卒業（2017）後、社会人になってからずっとシステム開発者として活動してまいりました。
-              WEBアプリケーション開発・デスクトップアプリケーション開発の両方に経験がありまして、色々なプロジェクトに参画させていただいております。
-              新しいスキルを身につけたい気持ちが強くて、日々の自習を心掛けており、モバイルアプリケーションも組み立てたりしています。
+            <span class="about-info">2017年からシステム開発者として働いており、Webアプリとデスクトップアプリの両方の開発経験があります。
+              現在、Java、Spring、Typescript、Angularで開発された水道料金管理Webシステム開発プロジェクトに携わっています。
+              日々、新しい機能や技術がどんどん生まれているため、新しいことに挑戦して新しいスキルを身につけるように努力をすることが大切だと常に考えています。
             </span>
           </p>
         </div>
