add new project and skills

--- a/en/index.html
+++ b/en/index.html
@@ -52,12 +52,21 @@
           <img class="svgIcon" src="../images/javaicon.svg" alt="java" />
         </div>
         <div class="skill-icon">
+          <img class="svgIcon" src="../images/php.svg" alt="java" />
+        </div>
+        <div class="skill-icon">
           <img class="svgIcon" src="../images/spring--thumbnail.svg" alt="spring" />
+        </div>
+        <div class="skill-icon">
+          <img class="svgIcon" src="../images/laravel.svg" alt="java" />
         </div>
         <div class="skill-icon"><img class="svgIcon" src="../images/CSharp.svg" alt="C#" />
         </div>
         <div class="skill-icon">
           <img class="svgIcon" src="../images/asp.svg" alt="ASP.NET" />
+        </div>
+        <div class="skill-icon">
+          <img class="svgIcon" src="../images/htmlcssjs-overview.svg" alt="html-Css-JavaScript" />
         </div>
         <div class="skill-icon">
           <img class="svgIcon" src="../images/vb.svg" alt="VB.NET" />
@@ -68,16 +77,7 @@
         <div class="skill-icon">
           <img class="svgIcon" src="../images/Microsoft-SQL-Server-logo.svg" alt="SQL Server" />
         </div>
-        <div class="skill-icon"> <img class="svgIcon" src="../images/flutter.svg" alt="flutter" />
-        </div>
-        <div class="skill-icon">
-          <img class="svgIcon" src="../images/htmlcssjs-overview.svg" alt="html-Css-JavaScript" />
-        </div>
-        <div class="skill-icon">
-          <img class="svgIcon" src="../images/uipath.svg" alt="UiPath" />
-        </div>
       </div>
-    </div>
   </section>
 
   <!-- Projects -->
