--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <span class="name">ナンダ ティン テイン トウ</span> </br>
             <span class="position">システム開発者</span></br></br>
             <span class="about-info">2017年からシステム開発者として働いており、Webアプリとデスクトップアプリの両方の開発経験があります。
-              現在、Java、Spring、Typescript、Angularで開発された水道料金管理Webシステム開発プロジェクトに携わっています。
               日々、新しい機能や技術がどんどん生まれているため、新しいことに挑戦して新しいスキルを身につけるように努力をすることが大切だと常に考えています。
             </span>
           </p>
@@ -50,12 +49,21 @@
           <img class="svgIcon" src="images/javaicon.svg" alt="java" />
         </div>
         <div class="skill-icon">
+          <img class="svgIcon" src="images/php.svg" alt="java" />
+        </div>
+        <div class="skill-icon">
           <img class="svgIcon" src="images/spring--thumbnail.svg" alt="spring" />
+        </div>
+        <div class="skill-icon">
+          <img class="svgIcon" src="images/laravel.svg" alt="java" />
         </div>
         <div class="skill-icon"><img class="svgIcon" src="images/CSharp.svg" alt="C#" />
         </div>
         <div class="skill-icon">
           <img class="svgIcon" src="images/asp.svg" alt="ASP.NET" />
+        </div>
+        <div class="skill-icon">
+          <img class="svgIcon" src="images/htmlcssjs-overview.svg" alt="html-Css-JavaScript" />
         </div>
         <div class="skill-icon">
           <img class="svgIcon" src="images/vb.svg" alt="VB.NET" />
@@ -66,14 +74,6 @@
         <div class="skill-icon">
           <img class="svgIcon" src="images/Microsoft-SQL-Server-logo.svg" alt="SQL Server" />
         </div>
-        <div class="skill-icon"> <img class="svgIcon" src="images/flutter.svg" alt="flutter" />
-        </div>
-        <div class="skill-icon">
-          <img class="svgIcon" src="images/htmlcssjs-overview.svg" alt="html-Css-JavaScript" />
-        </div>
-        <div class="skill-icon">
-          <img class="svgIcon" src="images/uipath.svg" alt="UiPath" />
-        </div>
       </div>
     </div>
   </section>
@@ -82,6 +82,62 @@
   <section id="Project" class="container">
     <h1 class="section-title">プロジェクト</h1>
     <div class="project-intro">
+      <!-- Project 1 -->
+      <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
+        <!-- Project Summarize -->
+        <div class="project-summarize">
+          <div class="img-blog">
+            <img class="proj-img" src="images/proj-karte.png" width="150px" height="auto" />
+          </div>
+          <div class="proj-desc proj-desc-box-second">
+            <p>患者様のカウンセリング・契約や処置など来院サービスを管理するWEBシステム
+              </br></br>
+
+            </p>
+          </div>
+        </div>
+        <!-- Project Contribution -->
+        <div class="project-contribute">
+          <div class="work-contribute">
+            <h4>０１｜WEBカルテ管理システム開発・保守</h4>
+            <p>
+              チームリーダーとして担当し、要件定義・設計を実施してメンバーのコードレビューからリリースまで携わっております。
+            </p>
+            <p>
+              <span class="fa-solid fa-business-time"></span>
+              <span>2023年02月 - 現在まで</span>
+            </p>
+            <p>
+              <span class="fa-solid fa-screwdriver-wrench"></span>
+              <span>要件定義・設計・コードレビュー・不具合対応やご希望対応</span>
+            </p>
+
+          </div>
+          <div class="proj-skills">
+            <div class="proj-skill-tag">
+              <img class="skill-tag" src="images/no background/php-logo-small.svg" alt="java" />
+              <label>PHP</label>
+            </div>
+            <div class="proj-skill-tag">
+              <img class="skill-tag" src="images/no background/laravel-icon-small.svg" alt="SPRING" />
+              <label>Laravel</label>
+            </div>
+            <div class="proj-skill-tag">
+              <img class="skill-tag" src="images/no background/database-icon-noBG.svg" alt="PL/SQL" />
+              <label>MySQL</label>
+            </div>
+            <div class="proj-skill-tag">
+              <img class="skill-tag" src="images/no background/aws-icon-small.svg" alt="JAVASCRIPT" />
+              <label>AWS</label>
+            </div>
+            <div class="proj-skill-tag">
+              <img class="skill-tag" src="images/no background/alpinejs-logo-small.svg" alt="JAVASCRIPT" />
+              <label>AlpineJS</label>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Project 1 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
@@ -99,7 +155,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０１｜水道料金業務システム新財務開発</h4>
+            <h4>０２｜水道料金業務システム新財務開発</h4>
             <p>
               現在は課題対応しており、Javaバッチ、typeScriptとPL/SQLの修正・開発を実施しています。
             </p>
@@ -153,7 +209,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０２｜工具卸業者向けECサイト再構築</h4>
+            <h4>０３｜工具卸業者向けECサイト再構築</h4>
             <p>主に担当させていただいたのはバックエンド開発であり、開発完了後テスト仕様書を作成して
               テストを実施いたしました。受入のテストで発生した不具合も対応しました。
             </p>
@@ -204,7 +260,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０３｜地方税統一QRコード対応</h4>
+            <h4>０４｜地方税統一QRコード対応</h4>
             <p>
               画面に表示された納付書・明細書の画像に応じてデータを修正できるようにして、紐づいているバッチデータも修正する機能と削除機能を実装しました。
               なお、画面入力条件による帳票出力する部分も担当させていただきました。
@@ -246,7 +302,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０４｜中国工場向け基幹システム開発</h4>
+            <h4>０５｜中国工場向け基幹システム開発</h4>
             <p>APIの開発を実施し、帳票出力のフロントの画面も作成しました。</p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -292,7 +348,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０５｜PMSダッシュボード開発</h4>
+            <h4>０６｜PMSダッシュボード開発</h4>
             <p>プロジェクトとタスク詳細を管理する画面と進捗状況・金額を表示するグラフの非同期画面のバックエンドとフロントの両方を担当しました。</p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -338,7 +394,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０６｜補償システム改修</h4>
+            <h4>０７｜補償システム改修</h4>
             <p>回収後の預かり金管理機能の追加対応であり、新規画面作成や既存画面の機能追加やファイル出力などを開発いたしました。</p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -376,7 +432,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０７｜Ecobuyラベル発行システム開発</h4>
+            <h4>０８｜Ecobuyラベル発行システム開発</h4>
             <p>少し単純なシステムであり、設計書からテストまでの全ての工程を一人で担当いたしました。</p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -414,7 +470,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０８｜PMSダッシュボードシステムの他言語対応</h4>
+            <h4>０９｜PMSダッシュボードシステムの他言語対応</h4>
             <p>過去に製造を担当したPMSダッシュボードシステムを他言語で運用できるように対応いたしました。</p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -460,7 +516,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>０９｜RPA開発・UiPath</h4>
+            <h4>１０｜RPA開発・UiPath</h4>
             <p>
               UiPathツールを使用して、RPAのプログラムを作成いたしました。
             </p>
