add new project to en

--- a/en/index.html
+++ b/en/index.html
@@ -36,8 +36,6 @@
             <span class="position">System Developer</span></br></br>
             <span class="about-info">I have been working as a system developer since 2017,and
               have experiences in both web application and desktop application development.
-              Currently,I am involving in the water charges management web system development project which is developed
-              with java,typescript and angular.
               A lot of new functions and technologies are appearing every day, so I always keep in
               mind that it is important to take new challenges and make efforts to acquire new skills.
             </span>
@@ -84,7 +82,67 @@
   <section id="Project" class="container">
     <h1 class="section-title">PROJECTs</h1>
     <div class="project-intro">
-      <!-- Project 1 -->
+            <!-- Project 1 -->
+            <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
+              <!-- Project Summarize -->
+              <div class="project-summarize">
+                <div class="img-blog">
+                  <img class="proj-img" src="../images/proj-karte.png" width="150px" height="auto" />
+                </div>
+                <div class="proj-desc proj-desc-box-second">
+                  <p>Web System that manages the medical recores such as counseling and treatments of patients
+                    </br></br>
+      
+                  </p>
+                </div>
+              </div>
+              <!-- Project Contribution -->
+              <div class="project-contribute">
+                <div class="work-contribute">
+                  <h4>01｜WEB medical record management system development and maintenance</h4>
+                  <p>
+                    I am currently working as a team leader.<br>
+                    I am responsible for defining requirements, designing, and being involved in everything from code reviews to release.
+                  </p>
+                  <p>
+                    <span class="fa-solid fa-business-time"></span>
+                    <span>2023/02/ - </span>
+                  </p>
+                  <p>
+                    <span class="fa-solid fa-screwdriver-wrench"></span>
+                    <span>
+                      Requirements Definitions, System Design, Code Review<br>
+                      Troubleshooting, Request response
+                    </span>
+                  </p>
+      
+                </div>
+                <div class="proj-skills">
+                  <div class="proj-skill-tag">
+                    <img class="skill-tag" src="../images/no background/php-logo-small.svg" alt="java" />
+                    <label>PHP</label>
+                  </div>
+                  <div class="proj-skill-tag">
+                    <img class="skill-tag" src="../images/no background/laravel-icon-small.svg" alt="SPRING" />
+                    <label>Laravel</label>
+                  </div>
+                  <div class="proj-skill-tag">
+                    <img class="skill-tag" src="../images/no background/database-icon-noBG.svg" alt="PL/SQL" />
+                    <label>MySQL</label>
+                  </div>
+                  <div class="proj-skill-tag">
+                    <img class="skill-tag" src="../images/no background/aws-icon-small.svg" alt="JAVASCRIPT" />
+                    <label>AWS</label>
+                  </div>
+                  <div class="proj-skill-tag">
+                    <img class="skill-tag" src="../images/no background/alpinejs-logo-small.svg" alt="JAVASCRIPT" />
+                    <label>AlpineJS</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+      <!-- Project 2 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -100,14 +158,14 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>01.｜Water Charges Management System</h4>
+            <h4>02.｜Water Charges Management System</h4>
             <p>
               Currently working on the issues, and we are modifying and developing Java Batch, typeScript and
               PL/SQL as needed.
             </p>
             <p>
               <span class="fa-solid fa-business-time"></span>
-              <span>2022/07/ - </span>
+              <span>2022/07/ - 2022/12/</span>
             </p>
             <p>
               <span class="fa-solid fa-screwdriver-wrench"></span>
@@ -140,7 +198,7 @@
         </div>
       </div>
 
-      <!-- Project ２ -->
+      <!-- Project 3 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -155,7 +213,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>02.｜Reconstruction of EC Site for Tool Wholesalers</h4>
+            <h4>03.｜Reconstruction of EC Site for Tool Wholesalers</h4>
             <p>I was mainly in charge of back-end development.
               I also created test specifications and run the tests and then fixed the problems that occurred in the
               acceptance test.
@@ -190,7 +248,7 @@
         </div>
       </div>
 
-      <!-- Project 3 -->
+      <!-- Project 4 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -206,7 +264,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>03.｜Unified Local Tax QR Code System</h4>
+            <h4>04.｜Unified Local Tax QR Code System</h4>
             <p>
               I have implemented the functions to correct and delete the associated batch data according
               to the images of the payment slip and statement displayed on the screen.
@@ -236,7 +294,7 @@
         </div>
       </div>
 
-      <!-- Project 4 -->
+      <!-- Project 5 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -250,7 +308,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>04.｜Core System Development for Chinese Factory</h4>
+            <h4>05.｜Core System Development for Chinese Factory</h4>
             <p>Developed AP and, created the screens that output the files.</p>
             <p>
               <span class="fa-solid fa-business-time"></span>
@@ -282,7 +340,7 @@
         </div>
       </div>
 
-      <!-- Project 5 -->
+      <!-- Project 6 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -296,7 +354,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>05.｜PMS Dashboard Development</h4>
+            <h4>06.｜PMS Dashboard Development</h4>
             <p>I was in charge of both backend and frontend development of the screens for managing project and task
               details.
               I also had the chance to work with the asynchronous screens for graphs that displayed progress and
@@ -331,7 +389,7 @@
         </div>
       </div>
 
-      <!-- Project 6 -->
+      <!-- Project 7 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -345,7 +403,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>06.｜Repairing Compensation System</h4>
+            <h4>07.｜Repairing Compensation System</h4>
             <p>It is an additional support for deposit management functions after collection, and we have developed new
               screens, added functions to existing screens, and file output.</p>
             <p>
@@ -370,7 +428,7 @@
         </div>
       </div>
 
-      <!-- Project 7 -->
+      <!-- Project 8 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -384,7 +442,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>07.｜Ecobuy Label Issuing System Development</h4>
+            <h4>08.｜Ecobuy Label Issuing System Development</h4>
             <p>It was a slightly simple system, and I was in charge of all the processes from design documents to
               testing by myself.</p>
             <p>
@@ -409,7 +467,7 @@
         </div>
       </div>
 
-      <!-- Project 8 -->
+      <!-- Project 9 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -423,7 +481,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>08.｜Multi-language Support for PMS Dashboard System</h4>
+            <h4>09.｜Multi-language Support for PMS Dashboard System</h4>
             <p>We have improvised the PMS dashboard system to be used in multi-language which I was in charge of
               manufacturing in the
               past .</p>
@@ -457,7 +515,7 @@
         </div>
       </div>
 
-      <!-- Project 9 -->
+      <!-- Project 10 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -471,7 +529,7 @@
         <!-- Project Contribution -->
         <div class="project-contribute">
           <div class="work-contribute">
-            <h4>09.｜RPA Development with UiPath</h4>
+            <h4>10.｜RPA Development with UiPath</h4>
             <p>
               I developed RPA programs using the UiPath tool.
             </p>
@@ -507,39 +565,47 @@
     <div class="skills-container">
       <p>JAVA</p>
       <div class="skill-type-container">
-        <div class="skills java"></div>
+        <div class="java"></div>
+      </div>
+      <p>PHP</p>
+      <div class="skill-type-container">
+        <div class="php"></div>
       </div>
       <p>C#</p>
       <div class="skill-type-container">
-        <div class="skills c-sharp"></div>
+        <div class="c-sharp"></div>
       </div>
       <p>VB.NET</p>
       <div class="skill-type-container">
-        <div class="skills vbnet"></div>
+        <div class="vbnet"></div>
       </div>
       <p>SQL</p>
       <div class="skill-type-container">
-        <div class="skills sql"></div>
-      </div>
-      <p>UiPath</p>
-      <div class="skill-type-container">
-        <div class="skills uipath"></div>
+        <div class="sql"></div>
       </div>
       <p>HTML CSS JAVASCRIPT</p>
       <div class="skill-type-container">
-        <div class="skills html-css-js"></div>
+        <div class="html-css-js"></div>
+      </div>
+      <p>AWS</p>
+      <div class="skill-type-container">
+        <div class="aws"></div>
+      </div>
+      <p>UiPath</p>
+      <div class="skill-type-container">
+        <div class="uipath"></div>
       </div>
       <p>PL/SQL</p>
       <div class="skill-type-container">
-        <div class="skills plsql"></div>
+        <div class="plsql"></div>
       </div>
       <p>AJAX</p>
       <div class="skill-type-container">
-        <div class="skills ajax"></div>
+        <div class="ajax"></div>
       </div>
       <p>Vue.JS</p>
       <div class="skill-type-container">
-        <div class="skills vue"></div>
+        <div class="vue"></div>
       </div>
     </div>
 
