--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
       </div>
 
-      <!-- Project 1 -->
+      <!-- Project 2 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -161,7 +161,7 @@
             </p>
             <p>
               <span class="fa-solid fa-business-time"></span>
-              <span>2022年07月 - </span>
+              <span>2022年07月 - 2022年12月</span>
             </p>
             <p>
               <span class="fa-solid fa-screwdriver-wrench"></span>
@@ -194,7 +194,7 @@
         </div>
       </div>
 
-      <!-- Project ２ -->
+      <!-- Project 3 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -243,7 +243,7 @@
         </div>
       </div>
 
-      <!-- Project 3 -->
+      <!-- Project 4 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -288,7 +288,7 @@
         </div>
       </div>
 
-      <!-- Project 4 -->
+      <!-- Project 5 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -334,7 +334,7 @@
         </div>
       </div>
 
-      <!-- Project 5 -->
+      <!-- Project 6 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -380,7 +380,7 @@
         </div>
       </div>
 
-      <!-- Project 6 -->
+      <!-- Project 7 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -418,7 +418,7 @@
         </div>
       </div>
 
-      <!-- Project 7 -->
+      <!-- Project 8 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -456,7 +456,7 @@
         </div>
       </div>
 
-      <!-- Project 8 -->
+      <!-- Project 9 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -502,7 +502,7 @@
         </div>
       </div>
 
-      <!-- Project 9 -->
+      <!-- Project 10 -->
       <div class="project-wrapper" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <!-- Project Summarize -->
         <div class="project-summarize">
@@ -552,39 +552,47 @@
     <div class="skills-container">
       <p>JAVA</p>
       <div class="skill-type-container">
-        <div class="skills java"></div>
+        <div class="java"></div>
+      </div>
+      <p>PHP</p>
+      <div class="skill-type-container">
+        <div class="php"></div>
       </div>
       <p>C#</p>
       <div class="skill-type-container">
-        <div class="skills c-sharp"></div>
+        <div class="c-sharp"></div>
       </div>
       <p>VB.NET</p>
       <div class="skill-type-container">
-        <div class="skills vbnet"></div>
+        <div class="vbnet"></div>
       </div>
       <p>SQL</p>
       <div class="skill-type-container">
-        <div class="skills sql"></div>
-      </div>
-      <p>UiPath</p>
-      <div class="skill-type-container">
-        <div class="skills uipath"></div>
+        <div class="sql"></div>
       </div>
       <p>HTML CSS JAVASCRIPT</p>
       <div class="skill-type-container">
-        <div class="skills html-css-js"></div>
+        <div class="html-css-js"></div>
+      </div>
+      <p>AWS</p>
+      <div class="skill-type-container">
+        <div class="aws"></div>
+      </div>
+      <p>UiPath</p>
+      <div class="skill-type-container">
+        <div class="uipath"></div>
       </div>
       <p>PL/SQL</p>
       <div class="skill-type-container">
-        <div class="skills plsql"></div>
+        <div class="plsql"></div>
       </div>
       <p>AJAX</p>
       <div class="skill-type-container">
-        <div class="skills ajax"></div>
+        <div class="ajax"></div>
       </div>
       <p>Vue.JS</p>
       <div class="skill-type-container">
-        <div class="skills vue"></div>
+        <div class="vue"></div>
       </div>
     </div>
 
